wk_taa_taaqa/src/objects/Forecast_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Close__c</fullName>
        <inlineHelpText>Actual Amount Closed Won at the end of the period.</inlineHelpText>
        <label>Actual Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_of_Quota__c</fullName>
        <formula>IF(ISNULL(Actual_Close__c),0,(Actual_Close__c / Quota_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual - % of Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount_Increase_Decrease__c</fullName>
        <formula>IF(Actual_Close__c = 0,0,(Actual_Close__c - Original_Forecast_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Increase (Decrease)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Actual__c</fullName>
        <inlineHelpText>Date that the Actual Close amount was taken.</inlineHelpText>
        <label>Date of Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Original_Snapshot__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date that the original forecast snapshot was taken.</inlineHelpText>
        <label>Date of Original Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Period__c</fullName>
        <inlineHelpText>Ending date of the period (month or quarter) that the snapshot is for.</inlineHelpText>
        <label>Forecast Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>IF(Month( Forecast_Period__c) = 1, &quot;01-January&quot;,
IF(Month( Forecast_Period__c) = 2, &quot;02-February&quot;,
IF(Month( Forecast_Period__c) = 3, &quot;03-March&quot;,
IF(Month( Forecast_Period__c) = 4, &quot;04-April&quot;,
IF(Month( Forecast_Period__c) = 5, &quot;05-May&quot;,
IF(Month( Forecast_Period__c) = 6, &quot;06-June&quot;,
IF(Month( Forecast_Period__c) = 7, &quot;07-July&quot;,
IF(Month( Forecast_Period__c) = 8, &quot;08-August&quot;,
IF(Month( Forecast_Period__c) = 9, &quot;09-September&quot;,
IF(Month( Forecast_Period__c) = 10, &quot;10-October&quot;,
IF(Month( Forecast_Period__c) = 11, &quot;11-November&quot;,
&quot;12-December&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Forecast_Amount__c</fullName>
        <inlineHelpText>Amount in High probability at the beginning of the period (as of original snapshot date)</inlineHelpText>
        <label>Original Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Forecast_of_Quota__c</fullName>
        <formula>Original_Forecast_Amount__c / Quota_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Forecast - % of Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Increase_Decrease__c</fullName>
        <formula>IF(Actual_Close__c = 0,0,(Actual_Close__c /  Original_Forecast_Amount__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage that the actual close amount is higher (lower) than the original forecast.</inlineHelpText>
        <label>Percent Increase (Decrease)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota_Amount__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revised_Forecast__c</fullName>
        <inlineHelpText>Updated monthly forecast amount from SSLT</inlineHelpText>
        <label>Revised Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snapshot_Type__c</fullName>
        <label>Snapshot Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Month</fullName>
                </value>
                <value>
                    <fullName>Current Quarter</fullName>
                </value>
                <value>
                    <fullName>Next Quarter</fullName>
                </value>
                <value>
                    <fullName>Current Month - R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Current Month - Software</fullName>
                </value>
                <value>
                    <fullName>Current Quarter - R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Current Quarter - Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unadjusted_Forecast__c</fullName>
        <label>Unadjusted Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Forecast_Period__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Forecast Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Forecast_Amount__c</columns>
        <columns>Forecast_Period__c</columns>
        <columns>Quota_Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Snapshot_Type__c</columns>
        <columns>Actual_Close__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Original_Forecast_Amount__c</columns>
        <columns>Unadjusted_Forecast__c</columns>
        <columns>Forecast_Period__c</columns>
        <columns>Quota_Amount__c</columns>
        <columns>Snapshot_Type__c</columns>
        <columns>Actual_Close__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Forecast_Period__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Forecast Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>